allow-business-tier-access-to-db.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-business-tier-access-to-db
  namespace: products-prod
spec:
  podSelector:
    matchLabels:
      app: products-db
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: products-business        
    ports:
      - port: 8080
