allow-products-prod-egress-traffic-to-cluster.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-products-prod-egress-traffic-to-cluster
  namespace: products-prod
spec: 
  podSelector:
    matchLabels: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:        
        cidr: 192.168.0.0/16  
    - ipBlock:        
        cidr: 10.0.0.0/16
