allow-ui-tier-access-to-business.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ui-tier-access-to-business
  namespace: products-prod
spec:
  podSelector:
    matchLabels:
      app: products-business
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: products-ui        
    ports:
      - port: 8080
