default-deny-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: products-prod
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress
